testdata/good/letrec.gol
let rec fix = fn(f) { f(fix(f)) } in {
 fix (fn(n){add(n, 1)})
}
