testdata/bad/circular.gol
let rec f = f(0) in {0}
